force-app/main/default/objects/SecurityAuditLog__c/SecurityAuditLog__c.object-meta.xml
<CustomObject>
    <label>TSP 로그</label>
    <nameField>
        <displayFormat>TSP-{00000000}</displayFormat>
        <label>TSP 로그 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>