force-app/main/default/objects/SecurityAuditLog__c/fields/AlertCount__c.field-meta.xml
<CustomField>
    <fullName>AlertCount__c</fullName>
    <defaultValue>1</defaultValue>
    <label>AlertCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>