force-app/main/default/objects/SecurityAuditLog__c/fields/AuditKey__c.field-meta.xml
<CustomField>
    <fullName>AuditKey__c</fullName>
    <description>External Key</description>
    <externalId>true</externalId>
    <label>AuditKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>