force-app/main/default/objects/SecurityAuditLog__c/fields/EventKey__c.field-meta.xml
<CustomField>
    <fullName>EventKey__c</fullName>
    <label>EventKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>