force-app/main/default/objects/SecurityAuditLog__c/fields/FirstOccurredAt__c.field-meta.xml
<CustomField>
    <fullName>FirstOccurredAt__c</fullName>
    <label>FirstOccurredAt</label>
    <type>DateTime</type>
</CustomField>