force-app/main/default/objects/SecurityAuditLog__c/fields/LastOccurredAt__c.field-meta.xml
<CustomField>
    <fullName>LastOccurredAt__c</fullName>
    <label>LastOccurredAt</label>
    <type>DateTime</type>
</CustomField>