force-app/main/default/objects/SecurityAuditLog__c/fields/MaxSeverity__c.field-meta.xml
<CustomField>
    <fullName>MaxSeverity__c</fullName>
    <label>MaxSeverity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>