force-app/main/default/objects/SecurityAuditLog__c/fields/OccurrenceHistory__c.field-meta.xml
<CustomField>
    <fullName>OccurrenceHistory__c</fullName>
    <label>OccurrenceHistory</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>