force-app/main/default/objects/SecurityAuditLog__c/fields/PolicyCode__c.field-meta.xml
<CustomField>
    <fullName>PolicyCode__c</fullName>
    <label>PolicyCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>