force-app/main/default/objects/SecurityAuditLog__c/fields/ResourceId__c.field-meta.xml
<CustomField>
    <fullName>ResourceId__c</fullName>
    <label>ResourceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>