force-app/main/default/objects/SecurityAuditLog__c/fields/ResourceName__c.field-meta.xml
<CustomField>
    <fullName>ResourceName__c</fullName>
    <label>ResourceName</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>