force-app/main/default/objects/SecurityAuditLog__c/fields/ResourceType__c.field-meta.xml
<CustomField>
    <fullName>ResourceType__c</fullName>
    <label>ResourceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>